fix: prevent AppShell Header and Footer from bouncing when scrollbar is hidden/unhidden

--- a/packages/@mantine/core/src/components/AppShell/AppShell.module.css
+++ b/packages/@mantine/core/src/components/AppShell/AppShell.module.css
@@ -90,7 +90,7 @@
 .footer {
   position: fixed;
   inset-inline: 0;
-  transition-property: transform, left, right;
+  transition-property: transform;
   background-color: var(--mantine-color-body);
 
   :where([data-layout='alt']) & {
